--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentelly/web-streams-polyfill",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-opentelly.1",
   "description": "Web Streams, based on the WHATWG spec reference implementation",
   "main": "dist/polyfill",
   "browser": "dist/polyfill.min.js",
