--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint": "eslint \"src/**/*.ts\"",
     "build": "npm run build:bundle && npm run build:types",
     "build:bundle": "rollup -c",
-    "build:types": "tsc --project . --emitDeclarationOnly && api-extractor run --local && node ./build/downlevel-dts.js",
+    "build:types": "tsc --project . --emitDeclarationOnly && api-extractor run && node ./build/downlevel-dts.js",
+    "update:types": "tsc --project . --emitDeclarationOnly && api-extractor run --local",
     "prepare": "npm run build"
   },
   "files": [
